# ad-vance

./: LICENSE  README.md  SPEC.md  pyproject.toml  requirements.txt
agents/: __init__.py
agents/data_integration/: __init__.py  agent.py
agents/data_integration/connectors/: __init__.py  adni.py  ampad.py  geo.py  rosmap.py
agents/hypothesis_generation/: __init__.py  agent.py
agents/knowledge_graph/: __init__.py  agent.py
agents/orchestrator/: __init__.py  agent.py  prompts.py
agents/reproducibility/: __init__.py  agent.py
agents/validation/: __init__.py  agent.py
docker/: Dockerfile  docker-compose.yml
docs/: demo_script.md  deployment_guide.md  executive_summary.md  whitepaper.md
notebooks/: demo.ipynb
